force-app/main/default/objects/Account/fields/CertifiedSite__c.field-meta.xml
<CustomField>
    <fullName>CertifiedSite__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used in Caller Verification Processes and controls other elements</inlineHelpText>
    <label>Certified Site</label>
    <type>Checkbox</type>
</CustomField>