force-app/main/default/objects/Account/fields/ISBTCompliant__c.field-meta.xml
<CustomField>
    <fullName>ISBTCompliant__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that the site is ISBT compliant</inlineHelpText>
    <label>ISBT Compliant</label>
    <type>Checkbox</type>
</CustomField>