force-app/main/default/objects/Account/recordTypes/ApheresisCenter.recordType-meta.xml
<RecordType>
    <fullName>ApheresisCenter</fullName>
    <active>true</active>
    <description>Apheresis Center</description>
    <label>Apheresis Center</label>
</RecordType>