force-app/main/default/objects/Account/recordTypes/HCP.recordType-meta.xml
<RecordType>
    <fullName>HCP</fullName>
    <active>true</active>
    <label>HCP</label>
</RecordType>