force-app/main/default/objects/Account/recordTypes/InfusionCenter.recordType-meta.xml
<RecordType>
    <fullName>InfusionCenter</fullName>
    <active>true</active>
    <description>Infusion Center</description>
    <label>Infusion Center</label>
</RecordType>