force-app/main/default/objects/Account/recordTypes/PlantRouting.recordType-meta.xml
<RecordType>
    <fullName>PlantRouting</fullName>
    <active>true</active>
    <description>Groups different hubs for routing material to and from plants</description>
    <label>Plant Routing</label>
</RecordType>