force-app/main/default/objects/Account/recordTypes/Team.recordType-meta.xml
<RecordType>
    <fullName>Team</fullName>
    <active>true</active>
    <label>Team</label>
</RecordType>